# barrows_calc

./: Cargo.toml  README.md  build.rs
src/: avaliable_items.rs  barrows_items.rs  barrows_state.rs  calc.l  calc.y  cli.rs  clog.rs  joiner.rs  main.rs  reader.rs  report.rs  rng.rs  rolls.rs  stats.rs  term_size.rs
src/stat_processing/: calc.rs  floats.rs  mod.rs
